# offer-aggregator

./: .env.example  .gitignore  Dockerfile  README.md  blacklist.txt  bot.py  channels.txt  docker-compose.yml  keywords.txt  pyproject.toml  requirements.txt
config/: keywords.txt  subreddits.txt  system_prompt.txt
src/filter_service/: app.py  classifier.py  config.py  container.py  keyword_filter.py  pipeline.py
src/publisher/: app.py  bot.py  config.py  container.py  formatter.py
src/reddit_collector/: app.py  config.py  container.py  stream.py
src/shared/: broker.py  config.py  models.py
src/telegram_collector/: app.py  config.py  container.py  context_buffer.py  handlers.py
tests/: conftest.py
tests/integration/: test_filter_pipeline.py
tests/unit/: test_broker.py  test_classifier.py  test_config.py  test_context_buffer.py  test_formatter.py  test_keyword_filter.py  test_models.py  test_publisher_bot.py  test_reddit_stream.py  test_telegram_handlers.py
