[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "offer-aggregator"
version = "1.0.0"
description = "Multi-service offer aggregator with LLM filtering"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "dishka>=1.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
telegram-collector = [
    "telethon>=1.37.0",
]
reddit-collector = [
    "praw>=7.8.0",
]
filter-service = [
    "anthropic>=0.40.0",
]
publisher = [
    "aiogram>=3.13.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "fakeredis>=2.25.0",
    "coverage>=7.4.0",
]
all = [
    "offer-aggregator[telegram-collector,reddit-collector,filter-service,publisher,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests",
]

[tool.coverage.run]
source = ["src"]
